[package]
name = "solana-vntr-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "=2.1.14"
solana-client = "2.1.14"
solana-account-decoder = "2.1.14"
solana-program-pack = "2.1.14"

spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "5.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "5.0.0", features = ["no-entrypoint"] }
spl-token-client = "0.12.0"

anchor-client = { version = "0.31.0", features = ["async"] }
anchor-lang = "=0.31.0"
# ... rest unchanged
